# fdk-model-publisher

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  fdk-model-publisher.yaml  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: codeql.yml  constraints.txt  deploy-demo.yaml  deploy-prod&demo.yaml  deploy-prod.yaml  deploy-staging.yaml
src/: __init__.py  app.py
src/api/: routes.py  views.py
src/fdk_model_publisher/: __init__.py  app.py  fdk_model_publisher.py  gunicorn_config.py  routes.py
src/fdk_model_publisher/api/: __init__.py  models.py  routes.py  views.py
src/fdk_model_publisher/config/: __init__.py  config.py
src/fdk_model_publisher/mapper/: ModelElementMapper.py  __init__.py  utils.py
src/fdk_model_publisher/model/: __init__.py  models.py
src/fdk_model_publisher/resources/: __init__.py  catalog.py  liveness.py  ping.py  ready.py
src/fdk_model_publisher/service/: __init__.py  cache.py  fdk_model_service.py  fetcher.py  mapper.py  rabbit.py
src/fdk_model_publisher/utils/: __init__.py  utils.py
src/fdk_model_publisher/view/: __init__.py  catalog.py  liveness.py
src/service/: fetcher.py  mapper.py
tests/: conftest.py
tests/contract/: test_ping.py  test_ready.py
tests/integration/: __init__.py  test_factory.py  test_fetcher.py  test_mapper.py  test_ping.py  test_ready.py  test_server.py  utils.py
tests/mocks/: __init__.py  circular_dependencies_json.py  circular_dependencies_ttl.py  data_services_catalog_ttl.py  example_Kommunereform.ttl  examples_json.py  examples_ttl.py  skagerrak_sparebank.json  skagerrak_sparebank_json.py  skagerrak_sparebank_ttl.py
tests/unit/: __init__.py  test_fdk_model_service.py  test_mapper.py  test_ready.py
