[tool.poetry]
authors = ["Nils Ove Tendenes <nils.ove@tendenes.com>"]
description = "Transforms models included in dataservice-descriptions to modelldcat-ap-no compliant models and expose the collection"
homepage = "https://github.com/Informasjonsforvaltning/fdk-model-publisher"
license = "Apache-2.0"
name = "fdk-model-publisher"
readme = "README.md"
repository = "https://github.com/Informasjonsforvaltning/fdk-model-publisher"
version = "0.1.1"
#packages = [
#    { include = "app.py", from = "src"},
#]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
[tool.poetry.dependencies]
aio-pika = "^6.8.1"
aiocache = {extras = ["redis"], version = "0.11.1"}
aiohttp = "^3.7.2"
aioredis = "1.3.1"
datacatalogtordf = "^1.4.7"
fdk-rdf-parser = "^2.0.5"
gunicorn = "^20.0.4"
modelldcatnotordf = "^1.1.1"
python = "^3.8"
python-dotenv = "^0.19.0"
python-json-logger = "^2.0.1"
pyyaml = "^5.3.1"
skolemizer = "^1.1.0"

[tool.poetry.dev-dependencies]
aioresponses = "^0.7.1"
black = "^21.12b0"
codecov = "^2.1.10"
coverage = {extras = ["toml"], version = "^6.2"}
docker-compose = "^1.27.4"
flake8 = "^4.0.1"
flake8-annotations = "^2.4.1"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^21.11.29"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
mypy = "^0.931"
pep8-naming = "^0.12.0"
pytest = "^6.1.1"
pytest-aiohttp = "^0.3.0"
pytest-cov = "^3.0.0"
pytest-docker = "^0.10.1"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.3.1"
rdflib = "^6.1.1"
requests-mock = "^1.8.0"
safety = "^1.10.0"
cryptography = "3.4.7"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = false
omit = ["*gunicorn_config.py", "*app.py"]
source = ["fdk_model_publisher"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.mypy]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = false
warn_unreachable = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "gunicorn.*",
  "requests.*",
  "motor.*",
  "pytest_mock",
  "aioresponses.*",
  "datacatalogtordf.*",
  "modelldcatnotordf.*",
  "fdk_rdf_parser.*",
  "aiocache.*",
  "pythonjsonlogger.*",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
