[tool.poetry]
authors = ["Nils Ove Tendenes <nils.ove@tendenes.com>"]
description = "Transforms models included in dataservice-descriptions to modelldcat-ap-no compliant models and expose the collection"
homepage = "https://github.com/Informasjonsforvaltning/fdk-model-publisher"
license = "Apache-2.0"
name = "fdk-model-publisher"
readme = "README.md"
repository = "https://github.com/Informasjonsforvaltning/fdk-model-publisher"
version = "0.1.1"

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
[tool.poetry.dependencies]
aio-pika = "^6.8.2"
aiocache = {extras = ["redis"], version = "0.11.1"}
aiohttp = "^3.8.1"
aioredis = "^1.3.1"
datacatalogtordf = "^1.4.7"
fdk-rdf-parser = "^2.1.10"
gunicorn = "^20.1.0"
modelldcatnotordf = "^1.1.1"
python = "^3.11"
python-dotenv = "^0.21.1"
python-json-logger = "^2.0.4"
pyyaml = "^5.4.1"
skolemizer = "^1.1.0"

[tool.poetry.dev-dependencies]
aioresponses = "^0.7.3"
black = "^22.6.0"
codecov = "^2.1.12"
coverage = {extras = ["toml"], version = "^7.1.0"}
docker-compose = "^1.29.2"
flake8 = "^6.1.0"
flake8-annotations = "^3.0.1"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.6.5"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.18.2"
mypy = "^1.2.0"
pep8-naming = "^0.13.1"
pytest = "^7.3.2"
pytest-aiohttp = "^1.0.4"
pytest-cov = "^4.0.0"
pytest-docker = "^1.0.0"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.8.2"
rdflib = "^6.2.0"
requests-mock = "^1.9.3"
safety = "^2.1.1"
cryptography = "^41.0.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = false
omit = ["*gunicorn_config.py", "*app.py"]
source = ["fdk_model_publisher"]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.mypy]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = false
warn_unreachable = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "gunicorn.*",
  "requests.*",
  "motor.*",
  "pytest_mock",
  "aioresponses.*",
  "datacatalogtordf.*",
  "modelldcatnotordf.*",
  "fdk_rdf_parser.*",
  "aiocache.*",
  "pythonjsonlogger.*",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
